--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "brindille-component",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simple ES6 class to build recursive html components.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "compile": "babel -d lib/ src/",
+    "prepublish": "npm run compile",
     "test": "mochify --transform babelify"
   },
   "repository": {
@@ -41,6 +43,7 @@
     "dom-walk": "^0.1.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "chai": "^3.5.0",
