--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
   "name": "brindille-component",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Simple ES6 class to build recursive html components.",
   "main": "lib/index.js",
   "scripts": {
-    "compile": "BABEL_ENV=production babel src -d lib",
-    "prepublish": "npm run compile",
-    "test": "NODE_PATH=src ava",
-    "test:watch": "npm test -- --watch",
-    "test:coverage": "nyc npm test"
+    "start": "NODE_PATH=src ava --watch",
+    "build": "BABEL_ENV=production babel src -d lib",
+    "test": "nyc ava"
   },
   "ava": {
     "require": [
-      "babel-register",
+      "@babel/register",
       "./test/helpers/setup-browser-env.js"
     ]
   },
-  "standard": {
-    "ignore": [
-      "lib/"
-    ]
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "env": {
+      "test": {
+        "plugins": [
+          "istanbul"
+        ]
+      }
+    }
+  },
+  "nyc": {
+    "require": [
+      "@babel/register"
+    ],
+    "include": [
+      "src/index.js"
+    ],
+    "sourceMap": false,
+    "instrument": false
   },
   "repository": {
     "type": "git",
@@ -53,13 +68,14 @@
   },
   "homepage": "https://github.com/brindille/brindille-component#readme",
   "devDependencies": {
-    "ava": "^0.19.1",
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.24.1",
-    "babel-preset-es2015": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browser-env": "^2.0.30",
-    "nyc": "^10.2.0",
-    "sinon": "^2.1.0"
+    "ava": "1.0.0-beta.4",
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "@babel/register": "^7.0.0-beta.47",
+    "babel-plugin-istanbul": "^5.1.0",
+    "browser-env": "^3.2.5",
+    "nyc": "^11.8.0",
+    "sinon": "^6.0.0"
   }
 }
